@@ -1,3 +1,5 @@
+Don't display empty option for system messages in delete messages by name
+
 Version 1.20.6 - Jul. 23, 2016
 Simplify ignore logic + disallow ignoring chatters with higher status
 Delete messages based on public message limit, no buffer for private ones needed
